--- a/src/less/style.less
+++ b/src/less/style.less
@@ -11,9 +11,38 @@ body {
 		width: 100%;
 		height: 100vh;
 
+		& .song-info {
+			position: absolute;
+			top: -300px;
+			background-color: rgba(1, 1, 1, 0.4);
+			color: #DDDDDD;
+			width: 300px;
+			height: 300px;
+			transition: top 0.4s linear;
+
+			&.shown {
+				top: 0;
+			}
+		}
+
+		& .settings {
+			position: absolute;
+			background-color: #444444;
+			width: 300px;
+			height: 300px;
+		}
+
 		& .cover {
+			position: absolute;
 			background-size: cover;
 			background-position: center;
+			height: 300px;
+			width: 300px;
+		}
+
+		& .background {
+			position: absolute;
+			background-image: url('img/background.png');
 			height: 300px;
 			width: 300px;
 		}
@@ -24,8 +53,14 @@ body {
 			bottom: 0;
 			width: 100%;
 			height: 50px;
-			background-color: #DDDDDD;
+			background: -webkit-gradient(linear, left top, left bottom,
+				color-stop(0%,#dddddd), color-stop(100%,#c6c6c6));
+			color: #444444;
 			text-align: center;
+
+			& i:hover {
+				color: #333333;
+			}
 
 			& .control {
 				width: 30px;
@@ -34,7 +69,12 @@ body {
 				top: 50%;
 				-webkit-transform: translateY(-50%);
 				font-size: 30px;
-				color: #444444;
+			}
+
+			& #settingsBtn {
+				position: absolute;
+				bottom: 17px;
+				right: 17px;
 			}
 		}
 	}
