Data-binding for song info

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -30,12 +30,21 @@ body {
 				font-size: 40px;
 				color: #E05858;
 				font-weight: bold;
+				word-wrap: break-word;
 			}
 
 			& .title {
 				font-size: 30px;
 				color: #DEDEDE;
+				word-wrap: break-word;
 			}
+		}
+
+		& #mousearea {
+			background: none;
+			position: absolute;
+			height: 300px;
+			width: 300px;
 		}
 
 		& .settings {
