--- a/src/less/style.less
+++ b/src/less/style.less
@@ -105,6 +105,7 @@ body {
 				color-stop(0%,#dddddd), color-stop(100%,#c6c6c6));
 			color: #444444;
 			text-align: center;
+            transform-style: preserve-3d;
 
 			& i:hover {
 				color: #333333;
