--- a/src/less/style.less
+++ b/src/less/style.less
@@ -53,14 +53,14 @@ body {
 
 		& .settings {
 			position: absolute;
-			top: 300px;
-			background-color: rgba(1, 1, 1, 0.6);
+			top: 350px;
+			background-color: rgba(1, 1, 1, 0.8);
 			width: 280px;
-			height: 280px;
+			height: 330px;
 			transition: top 0.2s linear;
 			padding: 10px;
 
-			&.shown {
+			&.active {
 				top: 0;
 			}
 
@@ -79,6 +79,22 @@ body {
 				color: @dark-grey-color;
 			}
 		}
+
+        & #settingsBtn {
+            position: absolute;
+            bottom: 17px;
+            right: 17px;
+            color: #444444;
+            transition: color 0.2s linear;
+
+            &:hover {
+                color: #333333;
+            }
+
+            &.active {
+                color: @white-color;
+            }
+        }
 
 		& .cover {
 			position: absolute;
@@ -118,12 +134,6 @@ body {
 				top: 50%;
 				-webkit-transform: translateY(-50%);
 				font-size: 30px;
-			}
-
-			& #settingsBtn {
-				position: absolute;
-				bottom: 17px;
-				right: 17px;
 			}
 		}
 	}
