Cover image transitions on change

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -102,13 +102,7 @@ body {
 			background-position: center;
 			height: 300px;
 			width: 300px;
-		}
-
-		& .background {
-			position: absolute;
-			background-image: url('img/background.png');
-			height: 300px;
-			width: 300px;
+            transition: background-image 2s linear;
 		}
 
 		& .controls {
