--- a/src/less/style.less
+++ b/src/less/style.less
@@ -7,6 +7,8 @@
     -webkit-user-select: none;
 }
 
+html, body {height: 100%;}
+
 body {
 	margin: 0;
 	font-family: verdana;
@@ -14,141 +16,147 @@ body {
 	& .main {
 		position: relative;
 		width: 100%;
-		height: 100vh;
+		height: 100%;
 		overflow: hidden;
 
-		& .song-info {
-			position: absolute;
-			top: -300px;
-			background-color: rgba(1, 1, 1, 0.6);
-			width: 280px;
-			height: 280px;
-			transition: top 0.2s linear;
-			padding: 10px;
-
-			&.shown {
-				top: 0;
-			}
-
-			& .artist {
-				font-size: 40px;
-				color: @red-color;
-				font-weight: bold;
-				word-wrap: break-word;
-			}
-
-			& .title {
-				font-size: 30px;
-				color: @white-color;
-				word-wrap: break-word;
-			}
-		}
-
-		& #mousearea {
-			position: absolute;
-			height: 300px;
-			width: 300px;
-		}
-
-        & .progress-bar {
-            position: absolute;
-            bottom: 50px;
+        & .flex-container {
             width: 100%;
-            height: 2px;
-            background-color: none;
-            transition: background-color 0.5s linear,
-                        height 0.2s linear;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
 
-            &:hover {
-                height: 5px;
-                background-color: @dark-grey-color;
+            & .cover {
+    			flex-grow: 1;
+                height: 1%; // Needs to be some percent
+    			background-size: cover;
+    			background-position: center;
+                transition: background-image 2s linear;
+
+                & .song-info {
+                    pointer-events: none;
+        			position: absolute;
+        			top: -100%;
+        			background-color: rgba(1, 1, 1, 0.6);
+        			width: 100%;
+        			height: 100%;
+                    box-sizing: border-box;
+        			transition: top 0.2s linear;
+        			padding: 10px;
+
+        			&.shown {
+        				top: 0;
+        			}
+
+        			& .artist {
+        				font-size: 40px;
+        				color: @red-color;
+        				font-weight: bold;
+        				word-wrap: break-word;
+        			}
+
+        			& .title {
+        				font-size: 30px;
+        				color: @white-color;
+        				word-wrap: break-word;
+        			}
+        		}
+    		}
+
+            & .controls {
+    			.noselect;
+    			height: 50px;
+    			background: -webkit-gradient(linear, left top, left bottom,
+    				color-stop(0%,#dddddd), color-stop(100%,#c6c6c6));
+    			color: #444444;
+    			text-align: center;
+                transform-style: preserve-3d;
+
+    			& i:hover {
+    				color: #333333;
+    			}
+
+    			& .control {
+    				width: 30px;
+    				margin: 0 20px;
+    				position: relative;
+    				top: 50%;
+    				-webkit-transform: translateY(-50%);
+    				font-size: 30px;
+    			}
+    		}
+
+            & .progress-bar {
+                position: absolute;
+                overflow: hidden;
+                bottom: 50px;
+                width: 100%;
+                height: 2px;
+                background-color: none;
+                transition: background-color 0.5s linear,
+                            height 0.2s linear;
+
+                &:hover {
+                    height: 5px;
+                    background-color: @dark-grey-color;
+                }
+
+                & .progress {
+                    background-color: @red-color;
+                    height: 100vh;
+                    transition: width 0.2s linear;
+                }
             }
 
-            & .progress {
-                background-color: @red-color;
-                height: 100vh;
-                transition: width 0.2s linear;
+            & .settings {
+    			position: absolute;
+                top: 0;
+                visibility: hidden;
+                opacity: 0;
+    			background-color: rgba(1, 1, 1, 0.8);
+                width: 100%;
+                height: 100%;
+                box-sizing: border-box;
+    			padding: 10px;
+                transition: visibility 0s linear 0.5s,opacity 0.5s linear;
+
+    			&.active {
+    				visibility: visible;
+                    opacity: 1;
+                    transition-delay: 0s;
+    			}
+
+    			& p {
+    				font-size: 30px;
+    				color: @white-color;
+    				margin: 10px 0;
+    			}
+
+    			& input {
+    				background-color: #FFFFFF;
+    				border: 0;
+    				border-radius: 5px;
+    				width: 100%;
+    				font-size: 25px;
+    				color: @dark-grey-color;
+    			}
+    		}
+
+            & #settingsBtn {
+                position: absolute;
+                bottom: 17px;
+                right: 17px;
+                color: #444444;
+                transition: color 0.5s linear;
+
+                &:hover {
+                    color: #333333;
+                }
+
+                &.active {
+                    color: @white-color;
+                }
             }
         }
-
-		& .settings {
-			position: absolute;
-			top: 350px;
-			background-color: rgba(1, 1, 1, 0.8);
-			width: 280px;
-			height: 330px;
-			transition: top 0.2s linear;
-			padding: 10px;
-
-			&.active {
-				top: 0;
-			}
-
-			& p {
-				font-size: 30px;
-				color: @white-color;
-				margin: 10px 0;
-			}
-
-			& input {
-				background-color: #FFFFFF;
-				border: 0;
-				border-radius: 5px;
-				width: 100%;
-				font-size: 25px;
-				color: @dark-grey-color;
-			}
-		}
-
-        & #settingsBtn {
-            position: absolute;
-            bottom: 17px;
-            right: 17px;
-            color: #444444;
-            transition: color 0.2s linear;
-
-            &:hover {
-                color: #333333;
-            }
-
-            &.active {
-                color: @white-color;
-            }
-        }
-
-		& .cover {
-			position: absolute;
-			background-size: cover;
-			background-position: center;
-			height: 300px;
-			width: 300px;
-            transition: background-image 2s linear;
-		}
-
-		& .controls {
-			.noselect;
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-			height: 50px;
-			background: -webkit-gradient(linear, left top, left bottom,
-				color-stop(0%,#dddddd), color-stop(100%,#c6c6c6));
-			color: #444444;
-			text-align: center;
-            transform-style: preserve-3d;
-
-			& i:hover {
-				color: #333333;
-			}
-
-			& .control {
-				width: 30px;
-				margin: 0 20px;
-				position: relative;
-				top: 50%;
-				-webkit-transform: translateY(-50%);
-				font-size: 30px;
-			}
-		}
 	}
 }
