--- a/src/less/style.less
+++ b/src/less/style.less
@@ -2,6 +2,8 @@
 @white-color: #DEDEDE;
 @dark-grey-color: #222222;
 
+@control-height: 40px;
+
 .noselect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -34,7 +36,6 @@ body {
                 transition: background-image 2s linear;
 
                 & .song-info {
-                    pointer-events: none;
         			position: absolute;
         			top: -100%;
         			background-color: rgba(1, 1, 1, 0.6);
@@ -44,7 +45,7 @@ body {
         			transition: top 0.2s linear;
         			padding: 10px;
 
-        			&.shown {
+        			&.active {
         				top: 0;
         			}
 
@@ -60,12 +61,27 @@ body {
         				color: @white-color;
         				word-wrap: break-word;
         			}
+
+                    & .playback-options {
+                        position: absolute;
+                        bottom: @control-height + 10px;
+                        left: 0;
+                        width: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        color: @white-color;
+
+                        & .option {
+                            flex-grow: 1;
+                            text-align: center;
+                        }
+                    }
         		}
     		}
 
             & .controls {
     			.noselect;
-    			height: 40px;
+    			height: @control-height;
     			background: -webkit-gradient(linear, left top, left bottom,
     				color-stop(0%,#dddddd), color-stop(100%,#c6c6c6));
     			color: #444444;
