repeat and random buttons functionality

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -74,6 +74,10 @@ body {
                         & .option {
                             flex-grow: 1;
                             text-align: center;
+
+                            & .active {
+                                color: @red-color;
+                            }
                         }
                     }
         		}
