Moved player files into seperate folder

--- a/src/player/less/style.less
+++ b/src/player/less/style.less
@@ -1,4 +1,8 @@
-@import 'variables';
+@red-color: #E05858;
+@white-color: #DEDEDE;
+@dark-grey-color: #222222;
+
+@control-height: 40px;
 
 .noselect {
     -webkit-touch-callout: none;
