Starting skeleton of playlist

--- a/src/player/less/style.less
+++ b/src/player/less/style.less
@@ -1,8 +1,4 @@
-@red-color: #E05858;
-@white-color: #DEDEDE;
-@dark-grey-color: #222222;
-
-@control-height: 40px;
+@import 'variables';
 
 .noselect {
     -webkit-touch-callout: none;
