Styling playlist window

--- a/src/player/style/style.less
+++ b/src/player/style/style.less
@@ -9,7 +9,7 @@ html, body {height: 100%;}
 
 body {
 	margin: 0;
-	font-family: verdana;
+	font-family: sans-serif;
 
 	& .main {
 		position: relative;
