--- a/src/playlist/style/style.less
+++ b/src/playlist/style/style.less
@@ -17,7 +17,7 @@ body {
 		flex-direction: column;
 		align-items: stretch;
 
-		& .tabBar {
+		& ul.tabBar {
 			display: flex;
 			flex-direction: row;
 			height: @control-height;
@@ -26,13 +26,17 @@ body {
 				color-stop(100%, @control-gradient-end));
 			width: 100%;
 			color: @dark-grey-color;
+			list-style-type: none;
+			padding: 0;
+			margin: 0;
 
-			& .tab {
+			& li {
 				flex-grow: 1;
 				text-align: center;
 
 				& i {
 					line-height: @control-height;
+					margin-right: 0.5em;
 				}
 
 				&:hover {
