Adding artist to playlist works

--- a/src/playlist/style/style.less
+++ b/src/playlist/style/style.less
@@ -110,6 +110,10 @@ body {
 								font-size: 0.8em;
 							}
 						}
+
+						&.libraryText {
+							line-height: 2.5em;
+						}
 					}
 
 					&:hover {
