Adding back button to library

--- a/src/playlist/style/style.less
+++ b/src/playlist/style/style.less
@@ -114,6 +114,13 @@ body {
 						&.libraryText {
 							line-height: 2.5em;
 						}
+
+						&.backText {
+							line-height: 2.5em;
+							width: 100%;
+							padding-left: 2.4em;
+							cursor: pointer;
+						}
 					}
 
 					&:hover {
