Fixed visual bug with backBtn

--- a/src/playlist/style/style.less
+++ b/src/playlist/style/style.less
@@ -116,10 +116,13 @@ body {
 						}
 
 						&.backText {
-							line-height: 2.5em;
 							width: 100%;
-							padding-left: 2.4em;
 							cursor: pointer;
+
+							& i {
+								line-height: 2.5em;
+								margin-left: 2.4em;
+							}
 						}
 					}
 
